# txt2img

./: .gitignore  .rustfmt.toml  Cargo.toml  readme.md
.devcontainer/: devcontainer.json
src/: cli.rs  config.rs  config.toml  lib.rs  main.rs  services.rs  services.toml  util.rs  utils.rs
src/cli/: mod.rs
src/client/: base.rs  hf.rs  mod.rs  openai.rs  stable_diffusion.rs  together.rs
src/error/: mod.rs
src/util/: mod.rs
