[package]
name = "gen"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "gen"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
config = { version = "0.14.1", features = ["toml"] }
indicatif = "0.17.9"
indicatif-log-bridge = "0.2.3"
infer = { version = "0.16.0", default-features = false }
log = "0.4.22"
rand = "0.8.5"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
simplelog = "0.12.2"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
