[package]
name = "txt2img"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "txt2img"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive", "help", "std", "usage"], default-features = false }
colored = "2.1.0"
config = { version = "0.14.1", features = ["toml"], default-features = false }
indicatif = "0.17.9"
indicatif-log-bridge = "0.2.3"
infer = { version = "0.16.0", default-features = false }
log = { version = "0.4.22", features = ["std", "serde"], default-features = false }
reqwest = { version = "0.12.8", features = ["json", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
simplelog = { version = "0.12.2", features = ["termcolor"], default-features = false }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal"] }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = "z"
codegen-units = 1
